# oep_foundation

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CURRENT_SPRINT.md  PROJECT_MEMORY.md  PROJECT_STATUS.md  README.md  TASK.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.scratch_build/: trust_t  verifier_t
assets/: README.md
build-wsl/: CTestTestfile.cmake  Makefile
build-wsl/tests/: CTestTestfile.cmake  Makefile
demo-workshop/: .gitignore  README.md  repository.json  workspace.json
docs/: README.md
docs/tasks/: WORK_PACKAGE_013.md  WORK_PACKAGE_014.md  WP-REP-001.md  WP-REP-002.md  WP-REP-003.md  WP-REP-004.md
examples/: README.md
platform/: README.md
platform/api/: CMakeLists.txt  MUTATION_API.md  README.md
platform/api/manual_test/: CMakeLists.txt  capi_manual_test.c
platform/archive/: CMakeLists.txt  README.md
platform/archive/include/oep/archive/: export_manifest.hpp  repository_exporter.hpp  repository_importer.hpp  repository_template.hpp  template_manifest.hpp
platform/archive/src/: archive_codec.cpp  archive_codec.hpp  export_manifest.cpp  repository_exporter.cpp  repository_importer.cpp  repository_template.cpp  template_manifest.cpp
platform/authentication/: README.md
platform/cli/: CMakeLists.txt  README.md
platform/cli/include/oep/cli/: command.hpp  command_registry.hpp
platform/cli/src/: command_registry.cpp  foundation_version.hpp  main.cpp
platform/cli/src/commands/: batch_command.cpp  batch_command.hpp  export_command.cpp  export_command.hpp  graph_command.cpp  graph_command.hpp  help_command.cpp  help_command.hpp  import_command.cpp  import_command.hpp  init_command.cpp  init_command.hpp  object_command.cpp  object_command.hpp  open_command.cpp  open_command.hpp  package_command.cpp  package_command.hpp  packages_command.cpp  packages_command.hpp  relationship_command.cpp  relationship_command.hpp  repository_path_option.cpp  repository_path_option.hpp  search_command.cpp  search_command.hpp  status_command.cpp  status_command.hpp  template_command.cpp  template_command.hpp  transaction_command.cpp  transaction_command.hpp  trust_command.cpp  trust_command.hpp  validate_command.cpp  validate_command.hpp  version_command.cpp  version_command.hpp
platform/cli/src/generator/: repository_generator.cpp  repository_generator.hpp  uuid.cpp  uuid.hpp
platform/exchange/: CMakeLists.txt  README.md
platform/filesystem/: README.md
platform/installer/: CMakeLists.txt  README.md
platform/installer/include/oep/installer/: ed25519.hpp  oep_package_manifest.hpp  package_installer.hpp  package_verifier.hpp  repository_registry.hpp  sha256.hpp  sha512.hpp  trust_store.hpp  zip_reader.hpp
platform/installer/src/: ed25519.cpp  oep_package_manifest.cpp  package_installer.cpp  package_verifier.cpp  repository_registry.cpp  sha256.cpp  sha512.cpp  trust_store.cpp  zip_reader.cpp
platform/licensing/: README.md
platform/logging/: README.md
platform/repository/: CMakeLists.txt  README.md
platform/repository/include/oep/repository/: audit_event.hpp  audit_store.hpp  batch_processor.hpp  engineering_object.hpp  graph_engine.hpp  json_value.hpp  metadata.hpp  object_store.hpp  relationship.hpp  relationship_store.hpp  timestamp.hpp  uuid.hpp
platform/repository/src/: audit_event.cpp  audit_store.cpp  batch_processor.cpp  engineering_object.cpp  graph_engine.cpp  json_value.cpp  json_value.hpp  metadata.cpp  object_store.cpp  relationship.cpp  relationship_store.cpp  timestamp.cpp  uuid.cpp
platform/runtime/: CLI_USAGE.md  CMakeLists.txt  README.md
platform/runtime/include/oep/runtime/: foundation_runtime.hpp  foundation_version.hpp  transaction_journal.hpp
platform/runtime/src/: foundation_runtime.cpp  transaction_journal.cpp
platform/search/: CMakeLists.txt  README.md
platform/telemetry/: README.md
platform/transactions/: README.md
platform/validation/: CMakeLists.txt  README.md
platform/validation/include/oep/validation/: repository_validator.hpp  validation_result.hpp
platform/validation/src/: repository_validator.cpp  validation_result.cpp
plugins/: README.md
specifications/: README.md
specifications/adr/: README.md  TEMPLATE.md
specifications/architecture/: OEP-ARCH-001.md  OEP-ARCH-002-REPOSITORY_RUNTIME_ASSESSMENT.md  README.md
specifications/exchange/: README.md
specifications/platform/: OEP-SPEC-001-CLI.md  OEP-SPEC-002-FOUNDATION_REPOSITORY.md  OEP-SPEC-003-REPOSITORY_METADATA.md  OEP-SPEC-004-ENGINEERING_OBJECT_MODEL.md  OEP-SPEC-005-OBJECT_RELATIONSHIP_MODEL.md  OEP-SPEC-006-REPOSITORY_SEARCH.md  OEP-SPEC-007_GRAPH_TRAVERSAL.md  OEP-SPEC-008-REPOSITORY_AUDIT_LOG.md  OEP-SPEC-009-REPOSITORY_VALIDATION.md  OEP-SPEC-010-PACKAGE_SYSTEM.md  OEP-SPEC-011-FOUNDATION_RUNTIME.md  OEP-SPEC-012-CLI_COMMAND_FRAMEWORK.md  OEP-SPEC-013-ENGINEERING_OBJECT_COMMANDS.md  OEP-SPEC-014-RELATIONSHIP_COMMANDS.md  OEP-SPEC-015_SEARCH_COMMANDS.md  (+8 more)
studios/: README.md
tests/: CMakeLists.txt  README.md
tests/cli/: CMakeLists.txt  batch_command_tests.cpp  cli_commands_tests.cpp  export_command_tests.cpp  graph_command_tests.cpp  import_command_tests.cpp  object_command_tests.cpp  package_command_tests.cpp  relationship_command_tests.cpp  search_command_tests.cpp  template_command_tests.cpp  transaction_command_tests.cpp  trust_command_tests.cpp
tests/exchange/: CMakeLists.txt  repository_exporter_tests.cpp  repository_importer_tests.cpp  repository_template_tests.cpp
tests/installer/: CMakeLists.txt  ed25519_tests.cpp  oep_package_manifest_tests.cpp  package_installer_tests.cpp  package_verifier_tests.cpp  repository_registry_tests.cpp  sha256_tests.cpp  sha512_tests.cpp  trust_store_tests.cpp  zip_reader_tests.cpp
tests/repository/: CMakeLists.txt  audit_store_tests.cpp  batch_processor_tests.cpp  engineering_object_tests.cpp  graph_engine_tests.cpp  metadata_tests.cpp  relationship_tests.cpp
tests/runtime/: CMakeLists.txt  foundation_runtime_tests.cpp  package_installation_tests.cpp  transaction_journal_tests.cpp  trust_integration_tests.cpp
tools/: README.md
(+119 files in other folders)
