cmake_minimum_required(VERSION 3.25)
project(OEPFoundation LANGUAGES CXX C)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)

enable_testing()

add_subdirectory(platform/repository)
add_subdirectory(platform/search)
add_subdirectory(platform/validation)
add_subdirectory(platform/packages)
add_subdirectory(platform/archive)
add_subdirectory(platform/installer)
add_subdirectory(platform/runtime)
add_subdirectory(platform/api)
add_subdirectory(platform/cli)
add_subdirectory(tests)
