add_executable(oep_repository_exporter_tests repository_exporter_tests.cpp)
target_link_libraries(oep_repository_exporter_tests PRIVATE oep_exchange oep_repository oep_packages)
add_test(NAME oep_repository_exporter_tests COMMAND oep_repository_exporter_tests)

add_executable(oep_repository_importer_tests repository_importer_tests.cpp)
target_link_libraries(oep_repository_importer_tests PRIVATE oep_exchange oep_repository oep_packages)
add_test(NAME oep_repository_importer_tests COMMAND oep_repository_importer_tests)
