add_executable(oep_foundation_runtime_tests foundation_runtime_tests.cpp)
target_link_libraries(oep_foundation_runtime_tests PRIVATE oep_runtime)
add_test(NAME oep_foundation_runtime_tests COMMAND oep_foundation_runtime_tests)

add_executable(oep_package_installation_tests package_installation_tests.cpp)
target_link_libraries(oep_package_installation_tests PRIVATE oep_runtime)
add_test(NAME oep_package_installation_tests COMMAND oep_package_installation_tests)

add_executable(oep_transaction_journal_tests transaction_journal_tests.cpp)
target_link_libraries(oep_transaction_journal_tests PRIVATE oep_runtime)
add_test(NAME oep_transaction_journal_tests COMMAND oep_transaction_journal_tests)

add_executable(oep_trust_integration_tests trust_integration_tests.cpp)
target_link_libraries(oep_trust_integration_tests PRIVATE oep_runtime)
add_test(NAME oep_trust_integration_tests COMMAND oep_trust_integration_tests)
